# Daily_Report_Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agent/: __init__.py  agent.json  agent_core.py  config.py  main.py  models.py  pipeline.py  scheduler.py
agent/engine/: __init__.py  context.py  runtime.py  spec.py
agent/feishu/: __init__.py  bitable.py  docwriter.py  messenger.py
agent/gitlab/: __init__.py  collector.py
agent/llm/: __init__.py  summarizer.py
agent/tools/: __init__.py  base.py  check_quality.py  collect_commits.py  fetch_developers.py  generate_summary.py  query_history.py  send_feishu_group.py  write_feishu_doc.py
deploy/: astribot-daily-agent.plist  astribot-daily-agent.service  deploy.sh
docs/: architecture.md  prompts-log.md  usage-guide.md
tests/: test_agent_core.py  test_config.py  test_docwriter.py  test_engine.py  test_feishu.py  test_gitlab.py  test_llm.py  test_models.py  test_pipeline.py  test_scheduler.py
